--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'org.egm'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
+apply plugin: 'war'
 
 sourceCompatibility = 1.7
 
@@ -12,4 +12,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.assertj:assertj-core:2.0.0'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'javax.servlet.jsp:jsp-api:2.2'
+    compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+    compile 'jstl:jstl:1.2'
 }
